# log_system

./: .clang-format  CMakeLists.txt  Makefile  README.md
.github/workflows/: cpp.yml
app/: CMakeLists.txt  main.cpp
include/logger/: ILogger.h  LogEntry.h  LogLevel.h  LogQueue.h  Logger.h  SocketLogger.h
src/: CMakeLists.txt  Logger.cpp  SocketLogger.cpp
stats/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  LogQueueTest.cpp  LoggerTest.cpp  SocketLoggerTest.cpp  StatsTest.cpp  main.cpp
